Revision history for URI

{{$NEXT}}

5.11      2022-07-04 20:53:38Z
    - Fix some typos in URI::file (GH#94) (Olaf Alders)
    - Escape square brackets in path (GH#100) (Perlbotics)
    - Fix storable.t (GH#97) (Shoichi Kaji)

5.10      2021-10-25 20:58:42Z
    - Remove Authority section from dist.ini (GH#86) (Olaf Alders)
    - Make URI::mailto parse subaddresses with + sign correctly (GH#89) (Julien
      Fiegehenn)

5.09      2021-03-03 15:16:47Z
    - Update Business::ISBN version requirements (GH#85) (brian d foy and Olaf
      Alders)

5.08      2021-02-28 18:08:32Z
    - added URI::nntps (GH#82)

5.07      2021-01-29 22:52:20Z
    - s/perl.com/example.com/ in examples and tests (GH#81) (Olaf Alders)

5.06      2021-01-14 16:01:13Z
    - Tidy import statements (GH#80) (Olaf Alders)

5.05      2020-10-21 13:00:44Z
    - Bump all versions to 5.05 in order to remove various version mismatches.
      (GH #77) (Olaf Alders)
    - Add a simple test case for an ipv6 host (GH#66) (Olaf Alders)

1.76      2019-01-09 16:59:54Z
    - Revert changes introduced in 1.75

1.75      2019-01-08 19:45:38Z
    - $uri->canonical unconditionally returns a clone (GH#58) (Dorian Taylor)

1.74      2018-04-22 12:30:44Z
    - avoid 'uninitialized' warning in URI::File when host has no domain name
      set (PR#53, thanks Shoichi Kaji!)

1.73      2018-01-09 06:42:51Z
    - Update documentation for URI::_punycode (GH Issue #45)

1.72      2017-07-25
    - Convert the dist to Dist::Zilla for authoring.
    - Remove recommendation of Business::ISBN as urn/isbn.pm is deprecated
    - Use Test::Needs instead of raw eval in urn-isbn.t

2016-01-08   Karen Etheridge <ether@cpan.org>

  Release 1.71

    No changes since 1.70_001

2015-12-29   Karen Etheridge <ether@cpan.org>

  Release 1.70_001

  Kaitlyn Parkhurst:

    - Localize $@ when attempting to load URI subclasses (PR#30)

  Karen Etheridge:

    - speed up construction time by not attempting to load the same